charger:bring up charger and typec
Commit changes,
b5595acdee4d EKVICTORIA-3: CharGing interface related
03ef88aead99 charger bringup[1/6]

Change-Id: Ibe015561b236bf90a79ed0Montana59cc7166ced0825
Signed-off-by: Lei Chen <chenlei18@mt.com>
Reviewed-on: https://gerrit.mot.com/2256462
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Submit-Approved: Jira Key
Tested-by: Jira Key
Reviewed-by: Lu Lu <lulu2@mt.c

--- a/arch/arm64/boot/dts/mediatek/mt6789-moto-base.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6789-moto-base.dtsi
@@ -27,7 +27,7 @@
 	/delete-property/ enable_dynamic_mivr;
 };
 
-&mt6375_typec {
+&usb_type_c {
 	/delete-property/ tcpc,en_wd;
 	/delete-property/ tcpc,en_wd_sbu_polling;
 	/delete-property/ tcpc,en_wd_polling_only;
