--- a/arch/arm64/configs/mgk_64_k510_defconfig
+++ b/arch/arm64/configs/mgk_64_k510_defconfig
@@ -602,3 +602,6 @@ CONFIG_EXT_MODULES="../vendor/mediatek/kernel_modules/connectivity/common ../ven
 CONFIG_NFC_CHIP_SUPPORT=y
 CONFIG_NFC_ST21NFC=m
 CONFIG_NFC_ST54_SPI=m
+
+CONFIG_CHARGER_SGM415XX=m
+CONFIG_TCPC_WUSB3801=m
