dts/display: tesla: add support for the pvt pane
Add the pvt panel file.
1. GIR off
2. changes for swire.
3.panel ID

Change-Id: I8b4430cda88459369f665d3286ccd5060e580dfb
Signed-off-by: houdz1 <houdz1@mt.com>
Reviewed-on: https://gerrit.mot.com/2256618
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Zhihong Kang <kangzh@motorola.com>
Submit-Approved: Jira Key
(cherry picked from commit 81c5d5a9f8dea434566ffd26cfb5c744046ddbc4)

--- a/arch/arm64/boot/dts/mediatek/tesla-display.dtsi
+++ b/arch/arm64/boot/dts/mediatek/tesla-display.dtsi
@@ -111,7 +111,7 @@
 		/delete-property/gate-ic;
 
 		compatible = "tianma,nt37701,cmd,144hz";
-		reg = <2>;
+		reg = <3>;
 		pm-enable-gpios = <&pio 164 0>,
                           <&pio 103 0>,
                           <&pio 165 0>,
@@ -133,7 +133,7 @@
 		/delete-property/gate-ic;
 
 		compatible = "tianma,nt37701,cmd,144hz";
-		reg = <1>;
+		reg = <2>;
 		pm-enable-gpios = <&pio 164 0>,
                           <&pio 103 0>,
                           <&pio 165 0>,
@@ -143,6 +143,27 @@
 		lhbm-enable;
 		port {
 			panel_in3: endpoint {
+				remote-endpoint = <&dsi_out>;
+			};
+		};
+	};
+	panel4@0 {
+		/delete-property/ compatible;
+		/delete-property/ pm-enable-gpios;
+		/delete-property/ reset-gpios;
+		/delete-property/gate-ic;
+
+		compatible = "tianma,nt37701,cmd,144hz";
+		reg = <1>;
+		pm-enable-gpios = <&pio 164 0>,
+                          <&pio 103 0>,
+                          <&pio 165 0>,
+                          <&pio 166 0>;
+		reset-gpios = <&pio 97 0>;
+		pinctrl-names = "default";
+		lhbm-enable;
+		port {
+			panel_in4: endpoint {
 				remote-endpoint = <&dsi_out>;
 			};
 		};
