--- a/arch/arm64/boot/dts/mediatek/vicky-display.dtsi
+++ b/arch/arm64/boot/dts/mediatek/vicky-display.dtsi
@@ -143,6 +143,7 @@
                           <&pio 12 0>;
 		reset-gpios = <&pio 85 0>;
 		pinctrl-names = "default";
+		lhbm-enable;
 		port {
 			panel_in2: endpoint {
 				remote-endpoint = <&dsi_out>;
