arm64/dts:cps4035 node add bootmode
wireless charge:
cps4035 node add bootmode

Signed-off-by: Jiacheng Ou <oujc1@motorola.com>
Change-Id: I16d6ee8ce0944b07c6a8cdb3eeeb73f0eba3d85a
Reviewed-on: https://gerrit.mot.com/2262671
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Wei Wei <weiweij@motorola.com>
Reviewed-by: Lu Chai <chailu1@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key
(cherry picked from commit 3fe565b84cb000c8ec83e533dd6df2c9942f17f8)

--- a/arch/arm64/boot/dts/mediatek/tesla-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/tesla-charger.dtsi
@@ -278,6 +278,7 @@
 
     cps_wls_charger@30 {
         compatible = "cps,wls-charger-cps4035-L";
+        bootmode = <&chosen>;
         charger = <&mt6375_chg>;
         wireless-fw-name = "cps4035.bin";
         reg = <0x30>;
