Tesla: Separate the eeprom files in different projects
Details:
  Separate the eeprom files in different projects

Pick from mainline to avoid compile error.

Change-Id: I3ca01d5b0a7f9ebde2203394ca2ea4c683b7a3a2
Signed-off-by: chenglong1 <chenglong1@mt.com>
Reviewed-on: https://gerrit.mot.com/2262978
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Submit-Approved: Jira Key
Tested-by: Jira Key
Reviewed-by: XiaoFeng Wang <wangxf32@mt.com>
Reviewed-by: <hansx3@motorola.com>
Reviewed-by: <liuzy55@motorola.com>
Reviewed-by: Long Cheng <chengl1@motorola.com>
Reviewed-by: Zhichao Chen <chenzc2@motorola.com>
Reviewed-on: https://gerrit.mot.com/2263395

--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-tesla.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-tesla.config
@@ -64,3 +64,6 @@ CONFIG_MOTO_TESLA_SWTP_CUST=y
 CONFIG_MICRON_UFSHID=y
 # CONFIG_UFSTW is not set
 CONFIG_SCSI_SKHID=y
+
+#Moto Tesla Camera eeprom
+CONFIG_MTK_EEPROM_PROJECT="tesla"
