Cam_cal: Fix compile error caused by tesla project configuration.
Some calibration data stored in sensor OTP, they need sensor driver read the data
out, currently we use global varaibles for passing the data, but sensor driver
depending on project configuration, if the sensor driver wasn't selected, eeprom
driver was selected defaultly, linker error will be observed.
This change is for fixing it.

Change-Id: I72e22e0d6feb651359b1eb4b167af6a9e1bf04ac
Signed-off-by: chenglong1 <chenglong1@mt.com>
Reviewed-on: https://gerrit.mot.com/2262976
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Submit-Approved: Jira Key
Tested-by: Jira Key
Reviewed-by: Zhichao Chen <chenzc2@motorola.com>
Reviewed-by: XiaoFeng Wang <wangxf32@mt.com>
Reviewed-on: https://gerrit.mot.com/2263396
Reviewed-by: <liuzy55@motorola.com>
Reviewed-by: <hansx3@motorola.com>

--- a/drivers/misc/mediatek/cam_cal/src/custom/Makefile
+++ b/drivers/misc/mediatek/cam_cal/src/custom/Makefile
@@ -15,8 +15,10 @@ MTK_CUSTOM_PATH := $(srctree)/drivers/misc/mediatek
 CAM_CAL_SRC_PATH := $(MTK_CUSTOM_PATH)/cam_cal/src
 CAM_CAL_CUSTOM_SRC_PATH := $(CAM_CAL_SRC_PATH)/custom
 
-ifdef CONFIG_MTK_EEPROM_PROJECT
+
 MOT_PROJECT := $(subst ",,$(CONFIG_MTK_EEPROM_PROJECT))
+
+ifneq ($(MOT_PROJECT),)
 CAM_CAL_CUSTOM_SRC_LAYOUT_PATH := $(CAM_CAL_CUSTOM_SRC_PATH)/camera_project/$(MOT_PROJECT)
 else
 CAM_CAL_CUSTOM_SRC_LAYOUT_PATH := $(CAM_CAL_CUSTOM_SRC_PATH)/layout
@@ -45,7 +47,7 @@ space := $(empty) $(empty)
 
 KERNEL_CAM_CAL_SRC := $(notdir $(wildcard $(CAM_CAL_CUSTOM_SRC_LAYOUT_PATH)/*.c))
 
-ifdef CONFIG_MTK_EEPROM_PROJECT
+ifneq ($(MOT_PROJECT),)
 KERNEL_CAM_CAL_OBJ := $(addprefix camera_project/$(MOT_PROJECT)/,$(patsubst %.c, %.o, $(KERNEL_CAM_CAL_SRC)))
 else
 KERNEL_CAM_CAL_OBJ := $(addprefix layout/,$(patsubst %.c, %.o, $(KERNEL_CAM_CAL_SRC)))
