Vicky: Camera bringup for Vicky (1/7).
- Add camera PMIC WL2868C driver
- Add main sensor S5KHM6S driver
- Add front sensor Hi1634Q driver
- Add UW sensor S5K4H7 driver
- Add Macro sensor OV02B10 driver

Change-Id: I709e94742de98097e2f57f87db15690398827707
Signed-off-by: chenglong1 <chenglong1@mt.com>
Reviewed-on: https://gerrit.mot.com/2263394
Reviewed-by: Long Cheng <chengl1@motorola.com>
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Zhichao Chen <chenzc2@motorola.com>
SLTApproved: Zhichao Chen <chenzc2@motorola.com>
Tested-by: Zhichao Chen <chenzc2@motorola.com>
Reviewed-by: <hansx3@motorola.com>
Reviewed-by: <liuzy55@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6789-vicky-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6789-vicky-common-overlay.dtsi
@@ -12,7 +12,7 @@
 
 #include <dt-bindings/gpio/gpio.h>
 #include "mediatek/mt6789-moto-common-overlay.dtsi"
-#include "mediatek/cust_mt6789_camera.dtsi"
+#include "mediatek/mt6789_vicky_camera_overlay.dtsi"
 #include "mediatek/vicky-display.dtsi"
 #include "mediatek/mt6789-vicky-audio-overlay.dtsi"
 #include "mediatek/vicky-touch.dtsi"
@@ -88,6 +88,25 @@
 
 #include "mediatek/cust_mt6789_camera_v4l2.dtsi"
 
+&i2c5 {
+	i2c_camera_ldo2{
+		compatible = "mediatek,i2c_camera_ldo2";
+		reg = <0x2f>;
+		status = "okay";
+	};
+	i2c_camera_ldo{
+		compatible = "mediatek,i2c_camera_ldo";
+		reg = <0x35>;
+		status = "okay";
+	};
+	aw36518@63 {
+		compatible = "awinic,aw36518";
+		reg = <0x63>;
+		status = "okay";
+	};
+};
+
+
 &i2c6 {
 	spk: speaker_amp@5c {
 		compatible = "richtek,rt5512";
@@ -97,6 +116,7 @@
 		sound-name-prefix = "Left";
 	};
 };
+
 
 &i2c0 {
 	status = "okay";
