--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-vicky.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-vicky.config
@@ -44,7 +44,9 @@ CONFIG_ZRAM_WRITEBACK=y
 CONFIG_I2C_CHARDEV=y
 CONFIG_MOTO_WL2864C=m
 CONFIG_MTK_VIDEO_AW36515=m
-CONFIG_CUSTOM_KERNEL_IMGSENSOR="mot_dubai_ov50a_mipi_raw mot_dubai_ov32c_mipi_raw mot_dubai_gc02m1b_mipi_raw mot_dubai_hi1336_mipi_raw"
+CONFIG_CUSTOM_KERNEL_IMGSENSOR="mot_vicky_s5khm6_mipi_raw mot_vicky_hi1634q_mipi_raw mot_vicky_s5k4h7_mipi_raw mot_vicky_ov02b10_mipi_raw"
+CONFIG_MTK_FLASHLIGHT_AW36518=m
+CONFIG_HQ_CAMERA_LDO=m
 # CONFIG_RT4831A_I2C is not set
 CONFIG_SND_SMARTPA_AW883XX=y
 # CONFIG_SND_SMARTPA_AW882XX is not set
@@ -67,3 +69,4 @@ CONFIG_MICRON_UFSHID=y
 # CONFIG_UFSTW is not set
 CONFIG_SCSI_SKHID=y
 # CONFIG_DRM_PANEL_ALPHA_SAMSUNG_S6E3HAE_CMD_120HZ is not set
+
