--- a/arch/arm64/configs/mgk_64_k510_defconfig
+++ b/arch/arm64/configs/mgk_64_k510_defconfig
@@ -1,3 +1,11 @@
+# This file was automatically generated from:
+#	kernel-5.10/arch/arm64/configs/mgk_64_k510_defconfig
+#	kernel-5.10/arch/arm64/configs/ext_config/moto-mgk_64_k510.config
+#	kernel-5.10/arch/arm64/configs/ext_config/debug-mgk_64_k510.config
+#	kernel-5.10/arch/arm64/configs/ext_config/debug-mgk_64_k510-vicky.config
+#	kernel-5.10/arch/arm64/configs/ext_config/factory-mgk_64_k510.config
+#	kernel-5.10/arch/arm64/configs/ext_config/moto-mgk_64_k510-vicky.config
+
 CONFIG_BUILD_CONFIG_FILE="build.config.mtk.aarch64"
 CONFIG_ABI_MONITOR=y
 CONFIG_ARCH_MEDIATEK=y
@@ -223,7 +231,7 @@ CONFIG_MTK_GPU_MT6895_SUPPORT=m
 CONFIG_MTK_GPU_MT6983_SUPPORT=m
 CONFIG_MTK_GPUFREQ_V2=y
 CONFIG_MTK_GPU_COMMON_DVFS_SUPPORT=y
-CONFIG_CUSTOM_KERNEL_IMGSENSOR="s5kjd1_mipi_raw imx519_mipi_raw imx586_mipi_raw imx576_mipi_raw imx481_mipi_raw s5k3m5sx_mipi_raw ov48b_mipi_raw imx766_mipi_raw s5k3p9sp_mipi_raw imx766dual_mipi_raw imx766o_mipi_raw imx709o_mipi_raw imx766dualo_mipi_raw s5k3m5sxo_mipi_raw imx499_mipi_raw s5k4h7alpha_mipi_raw gc02m1_mipi_raw imx582_mipi_raw imx596_mipi_raw"
+CONFIG_CUSTOM_KERNEL_IMGSENSOR="mot_vicky_s5khm6_mipi_raw mot_vicky_hi1634q_mipi_raw mot_vicky_s5k4h7_mipi_raw mot_vicky_ov02b10_mipi_raw"
 CONFIG_MTK_IMGSENSOR=m
 CONFIG_MTK_IMGSENSOR_PLATFORM_SUPPORT=y
 CONFIG_MTK_IMGSENSOR_MT6853=m
@@ -275,7 +283,6 @@ CONFIG_LEDS_MTK_PWM=m
 CONFIG_LEDS_PWM=m
 CONFIG_LEDS_REGULATOR_VIBRATOR=m
 CONFIG_LEDS_MT6360=m
-CONFIG_MTK_VIDEO_LM3643=m
 CONFIG_MTK_VIDEO_LM3644=m
 CONFIG_MTK_VIDEO_SY7806=m
 CONFIG_MTK_VIDEO_KTD2687=m
@@ -605,3 +612,157 @@ CONFIG_NFC_ST54_SPI=m
 
 CONFIG_CHARGER_SGM415XX=m
 CONFIG_TCPC_WUSB3801=m
+#
+# Please avoid changing the MTK defconfig files and use this file to
+# add any Motorola-specific configuration changes that are applicable to
+# userdebug, eng, and user builds.
+#
+# After building, a list of all of the config files that are used can be found
+# at the top of:
+# out/target/product/$(PRODUCT)/obj/KERNEL_OBJ/mapphone_defconfig
+#
+# The actual output of the kernel configuration system can be found at:
+# out/target/product/$(PRODUCT)/obj/KERNEL_OBJ/.config
+#
+# You can check the .config file to verify that your configuration option is
+# being set as expected.
+#
+
+# Enable fscrypt V2 wrapped key mode.
+CONFIG_FSCRYPT_WRAPED_KEY_MODE_SUPPORT=y
+
+# Enable DRDI feature
+CONFIG_MOTO_DRDI_SUPPORT=y
+
+# Set modem to Lf/Lt/W/G mode
+CONFIG_MTK_MD1_SUPPORT=9
+#
+# Please avoid changing the MTK defconfig files and use this file to
+# add any Motorola-specific configuration changes that are applicable to
+# userdebug, eng, and user builds.
+#
+# After building, a list of all of the config files that are used can be found
+# at the top of:
+# out/target/product/$(PRODUCT)/obj/KERNEL_OBJ/mapphone_defconfig
+#
+# The actual output of the kernel configuration system can be found at:
+# out/target/product/$(PRODUCT)/obj/KERNEL_OBJ/.config
+#
+# You can check the .config file to verify that your configuration option is
+# being set as expected.
+#
+
+#
+# Please avoid changing the MTK defconfig files and use this file to
+# add any Motorola-specific configuration changes that are applicable to
+# userdebug, eng, and user builds.
+#
+# After building, a list of all of the config files that are used can be found
+# at the top of:
+# out/target/product/$(PRODUCT)/obj/KERNEL_OBJ/mapphone_defconfig
+#
+# The actual output of the kernel configuration system can be found at:
+# out/target/product/$(PRODUCT)/obj/KERNEL_OBJ/.config
+#
+# You can check the .config file to verify that your configuration option is
+# being set as expected.
+#
+#add for svp
+CONFIG_TRUSTONIC_TEE_SUPPORT=m
+CONFIG_MTK_DRM_KEY_MNG_SUPPORT=y
+CONFIG_MTK_ENABLE_GENIEZONE=m
+CONFIG_MTK_SEC_VIDEO_PATH_SUPPORT=y
+CONFIG_MTK_TEE_GP_SUPPORT=y
+CONFIG_MTK_SVP_ON_MTEE_SUPPORT=y
+CONFIG_CUSTOM_KERNEL_IMGSENSOR="s5khm6sof_mipi_raw hi1634q_mipi_raw s5k4h7yx_mipi_raw ov02b1bof_mipi_raw"
+CONFIG_MTK_FLASHLIGHT_AW36518=m
+CONFIG_HQ_CAMERA_LDO=m
+
+#
+# Please avoid changing the MTK defconfig files and use this file to
+# add any Motorola-specific configuration changes that are applicable to
+# userdebug, eng, and user builds.
+#
+# After building, a list of all of the config files that are used can be found
+# at the top of:
+# out/target/product/$(PRODUCT)/obj/KERNEL_OBJ/mapphone_defconfig
+#
+# The actual output of the kernel configuration system can be found at:
+# out/target/product/$(PRODUCT)/obj/KERNEL_OBJ/.config
+#
+# You can check the .config file to verify that your configuration option is
+# being set as expected.
+#
+
+#
+# Please avoid changing the MTK defconfig files and use this file to
+# add any Motorola-specific configuration changes that are applicable to
+# userdebug, eng, and user builds.
+#
+# After building, a list of all of the config files that are used can be found
+# at the top of:
+# out/target/product/$(PRODUCT)/obj/KERNEL_OBJ/mapphone_defconfig
+#
+# The actual output of the kernel configuration system can be found at:
+# out/target/product/$(PRODUCT)/obj/KERNEL_OBJ/.config
+#
+# You can check the .config file to verify that your configuration option is
+# being set as expected.
+#
+
+# CONFIG_DRM_PANEL_TRULY_TD4330_VDO is not set
+# CONFIG_DRM_PANEL_TRULY_TD4330_CMD is not set
+# CONFIG_DRM_PANEL_TRULY_FT8756_VDO is not set
+# CONFIG_DRM_PANEL_ALPHA_JDI_NT36672C_CPHY_VDO is not set
+# CONFIG_DRM_PANEL_SC_NT36672C_VDO_120HZ is not set
+# CONFIG_DRM_PANEL_TIANMA_R66451_CMD_120HZ is not set
+# CONFIG_DRM_PANEL_TIANMA_NT36672E_VDO_120HZ_HFP is not set
+# CONFIG_DRM_PANEL_ALPHA_JDI_NT36672E_CPHY_VDO is not set
+# CONFIG_DRM_PANEL_ALPHA_JDI_NT36672E_VDO_120HZ is not set
+# CONFIG_DRM_PANEL_ALPHA_JDI_NT36672E_VDO_144HZ is not set
+# CONFIG_DRM_PANEL_ALPHA_JDI_NT36672E_VDO_60HZ is not set
+# CONFIG_DRM_PANEL_SAMSUNG_S68FC01_VDO_AOD is not set
+# CONFIG_DRM_PANEL_ALPHA_JDI_NT36672E_VDO_120HZ_HFP is not set
+# CONFIG_DRM_PANEL_ALPHA_JDI_NT36672E_VDO_144HZ_HFP is not set
+# CONFIG_DRM_PANEL_HX_NT37701_DPHY_CMD is not set
+# CONFIG_DRM_PANEL_HX_NT37701_DPHY_CMD_120HZ is not set
+# CONFIG_DRM_PANEL_TRULY_NT35595_CMD is not set
+# CONFIG_DRM_PANEL_SAMSUNG_ANA6705_CMD is not set
+# CONFIG_DRM_PANEL_SAMSUNG_OP_CMD is not set
+# CONFIG_DRM_PANEL_SAMSUNG_OP_CMD_MSYNC2 is not set
+# CONFIG_DRM_PANEL_TIANMA_NT37701A_655_FHDP_DPHY_CMD_144HZ is not set
+CONFIG_DRM_PANEL_CSOT_NT37701A_655_FHDP_DPHY_CMD_144HZ=m
+CONFIG_DRM_PANEL_MOT_DUMMY_VDO_60HZ=m
+CONFIG_OF_GPIO=y
+#enable zram writeback
+CONFIG_ZRAM_WRITEBACK=y
+#add for i2c tool
+CONFIG_I2C_CHARDEV=y
+CONFIG_MOTO_WL2864C=m
+CONFIG_MTK_VIDEO_AW36515=m
+CONFIG_CUSTOM_KERNEL_IMGSENSOR="s5khm6sof_mipi_raw hi1634q_mipi_raw s5k4h7yx_mipi_raw ov02b1bof_mipi_raw"
+CONFIG_MTK_FLASHLIGHT_AW36518=m
+CONFIG_HQ_CAMERA_LDO=m
+# CONFIG_RT4831A_I2C is not set
+CONFIG_SND_SMARTPA_AW883XX=y
+# CONFIG_SND_SMARTPA_AW882XX is not set
+# CONFIG_SND_I2S1 is not set
+CONFIG_TYPEC_FSA4480=m
+CONFIG_MOTO_WLC_ALG_SUPPORT=m
+CONFIG_MOTO_CHG_TCMD_SUPPORT=m
+#add for svp
+CONFIG_TRUSTONIC_TEE_SUPPORT=m
+CONFIG_MTK_DRM_KEY_MNG_SUPPORT=y
+CONFIG_MTK_ENABLE_GENIEZONE=m
+CONFIG_MTK_SEC_VIDEO_PATH_SUPPORT=y
+CONFIG_MTK_TEE_GP_SUPPORT=y
+CONFIG_MTK_SVP_ON_MTEE_SUPPORT=y
+
+# Add swtp customization
+CONFIG_MOTO_TESLA_SWTP_CUST=y
+
+CONFIG_MICRON_UFSHID=y
+# CONFIG_UFSTW is not set
+CONFIG_SCSI_SKHID=y
+# CONFIG_DRM_PANEL_ALPHA_SAMSUNG_S6E3HAE_CMD_120HZ is not set
+
