--- a/drivers/misc/mediatek/flashlight/Kconfig
+++ b/drivers/misc/mediatek/flashlight/Kconfig
@@ -141,6 +141,18 @@ config MTK_FLASHLIGHT_DUMMY
 
 	  Say M here if you want to compile this driver as a module.
 
+config MTK_FLASHLIGHT_AW36518
+	tristate "Mediatek flashlight aw36518 flashlight driver"
+	depends on MTK_FLASHLIGHT
+	default n
+	help
+	This is flashlight aw36518 flashlight driver for camera.
+
+	Say Y here if you want a driver IC with GPIO interface.
+	Select this only if your board has this IC.
+
+	Say M here if you want to compile this driver as a module.
+
 config MTK_FLASHLIGHT_DUMMY_GPIO
 	tristate "Mediatek flashlight dummy gpio driver"
 	depends on MTK_FLASHLIGHT
