--- a/arch/arm64/boot/dts/mediatek/mt6789_vicky_camera_overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6789_vicky_camera_overlay.dtsi
@@ -44,14 +44,14 @@
 			output-high;
 		};
 	};
-	camera_pins_cam3_rst_0: cam3@0 {
+	camera_pins_cam4_rst_0: cam3@0 {
 		pins_cmd_dat {
 			pinmux = <PINMUX_GPIO20__FUNC_GPIO20>;
 			slew-rate = <1>;
 			output-low;
 		};
 	};
-	camera_pins_cam3_rst_1: cam3@1 {
+	camera_pins_cam4_rst_1: cam3@1 {
 		pins_cmd_dat {
 			pinmux = <PINMUX_GPIO20__FUNC_GPIO20>;
 			slew-rate = <1>;
@@ -148,31 +148,31 @@
 			drive-strength = <3>;
 		};
 	};
-	camera_pins_cam3_mclk_off: camera_pins_cam3_mclk_off {
+	camera_pins_cam4_mclk_off: camera_pins_cam4_mclk_off {
 		pins_cmd_dat {
 			pinmux = <PINMUX_GPIO128__FUNC_GPIO128>;
 			drive-strength = <1>;
 		};
 	};
-	camera_pins_cam3_mclk_2ma: camera_pins_cam3_mclk_2ma {
+	camera_pins_cam4_mclk_2ma: camera_pins_cam4_mclk_2ma {
 		pins_cmd_dat {
 			pinmux = <PINMUX_GPIO128__FUNC_CMMCLK2>;
 			drive-strength = <0>;
 		};
 	};
-	camera_pins_cam3_mclk_4ma: camera_pins_cam3_mclk_4ma {
+	camera_pins_cam4_mclk_4ma: camera_pins_cam4_mclk_4ma {
 		pins_cmd_dat {
 			pinmux = <PINMUX_GPIO128__FUNC_CMMCLK2>;
 			drive-strength = <1>;
 		};
 	};
-	camera_pins_cam3_mclk_6ma: camera_pins_cam3_mclk_6ma {
+	camera_pins_cam4_mclk_6ma: camera_pins_cam4_mclk_6ma {
 		pins_cmd_dat {
 			pinmux = <PINMUX_GPIO128__FUNC_CMMCLK2>;
 			drive-strength = <2>;
 		};
 	};
-	camera_pins_cam3_mclk_8ma: camera_pins_cam3_mclk_8ma {
+	camera_pins_cam4_mclk_8ma: camera_pins_cam4_mclk_8ma {
 		pins_cmd_dat {
 			pinmux = <PINMUX_GPIO128__FUNC_CMMCLK2>;
 			drive-strength = <3>;
@@ -203,7 +203,7 @@
 			"cam0_rst0", "cam0_rst1",
 			"cam1_rst0", "cam1_rst1",
 			"cam2_rst0", "cam2_rst1",
-			"cam3_rst0", "cam3_rst1",
+			"cam4_rst0", "cam4_rst1",
 			"cam0_mclk_off",
 			"cam0_mclk_2mA", "cam0_mclk_4mA",
 			"cam0_mclk_6mA", "cam0_mclk_8mA",
@@ -213,9 +213,9 @@
 			"cam2_mclk_off",
 			"cam2_mclk_2mA", "cam2_mclk_4mA",
 			"cam2_mclk_6mA", "cam2_mclk_8mA",
-			"cam3_mclk_off",
-			"cam3_mclk_2mA", "cam3_mclk_4mA",
-			"cam3_mclk_6mA", "cam3_mclk_8mA",
+			"cam4_mclk_off",
+			"cam4_mclk_2mA", "cam4_mclk_4mA",
+			"cam4_mclk_6mA", "cam4_mclk_8mA",
 			"cam_mipi_switch_sel_1", "cam_mipi_switch_sel_0";
 
 	pinctrl-0 = <&camera_pins_default>;
@@ -225,8 +225,8 @@
 	pinctrl-4 = <&camera_pins_cam1_rst_1>;
 	pinctrl-5 = <&camera_pins_cam2_rst_0>;
 	pinctrl-6 = <&camera_pins_cam2_rst_1>;
-	pinctrl-7 = <&camera_pins_cam3_rst_0>;
-	pinctrl-8 = <&camera_pins_cam3_rst_1>;
+	pinctrl-7 = <&camera_pins_cam4_rst_0>;
+	pinctrl-8 = <&camera_pins_cam4_rst_1>;
 	pinctrl-9 = <&camera_pins_cam0_mclk_off>;
 	pinctrl-10 = <&camera_pins_cam0_mclk_2ma>;
 	pinctrl-11= <&camera_pins_cam0_mclk_4ma>;
@@ -242,13 +242,14 @@
 	pinctrl-21 = <&camera_pins_cam2_mclk_4ma>;
 	pinctrl-22 = <&camera_pins_cam2_mclk_6ma>;
 	pinctrl-23 = <&camera_pins_cam2_mclk_8ma>;
-	pinctrl-24 = <&camera_pins_cam3_mclk_off>;
-	pinctrl-25 = <&camera_pins_cam3_mclk_2ma>;
-	pinctrl-26 = <&camera_pins_cam3_mclk_4ma>;
-	pinctrl-27 = <&camera_pins_cam3_mclk_6ma>;
-	pinctrl-28 = <&camera_pins_cam3_mclk_8ma>;
+	pinctrl-24 = <&camera_pins_cam4_mclk_off>;
+	pinctrl-25 = <&camera_pins_cam4_mclk_2ma>;
+	pinctrl-26 = <&camera_pins_cam4_mclk_4ma>;
+	pinctrl-27 = <&camera_pins_cam4_mclk_6ma>;
+	pinctrl-28 = <&camera_pins_cam4_mclk_8ma>;
 	pinctrl-29 = <&camera_pins_cam_mipi_switch_sel_1>;
 	pinctrl-30 = <&camera_pins_cam_mipi_switch_sel_0>;
+
 	/* main hm6*/
 	cam0_vcama-supply = <&mt6358_vcamio_reg>;
 	cam0_vcamio-supply = <&mt6358_vcamio_reg>;
@@ -265,9 +266,9 @@
 	cam2_vcamio-supply = <&mt6358_vcamio_reg>;
 	cam2_vcamd-supply = <&mt6358_vcamio_reg>;
 
-	/*main4 ov02b10*/
-	cam3_vcamio-supply = <&mt6358_vcamio_reg>;
-	cam3_vcama-supply = <&mt6358_vcamio_reg>;
+	/*main3 ov02b10*/
+	cam4_vcamio-supply = <&mt6358_vcamio_reg>;
+	cam4_vcama-supply = <&mt6358_vcamio_reg>;
 
 	cam0_pin_mclk = "mclk";
 	cam0_pin_rst = "gpio";
@@ -289,14 +290,14 @@
 	//cam2_pin_vcama1 = "regulator";
 	cam1_pin_mipi_switch_sel = "gpio";
 	cam2_pin_mipi_switch_sel = "gpio";
-	cam3_pin_mclk = "mclk";
-	cam3_pin_rst = "gpio";
-	cam3_pin_vcama = "wl2868";
-	cam3_pin_vcamio = "wl2868";
+	cam4_pin_mclk = "mclk";
+	cam4_pin_rst = "gpio";
+	cam4_pin_vcama = "wl2868";
+	cam4_pin_vcamio = "wl2868";
 	cam0_enable_sensor = "mot_vicky_s5khm6_mipi_raw";
 	cam1_enable_sensor = "mot_vicky_hi1634q_mipi_raw";
 	cam2_enable_sensor = "mot_vicky_s5k4h7_mipi_raw";
-	cam3_enable_sensor = "mot_vicky_ov02b10_mipi_raw";
+	cam4_enable_sensor = "mot_vicky_ov02b10_mipi_raw";
 	status = "okay";
 };
 /* CAMERA GPIO end */
@@ -321,14 +322,6 @@
 		reg = <0x56>;
 		status = "okay";
 	};
-#if 0
-	camera_main_two_mtk:camera_main_two@10 {
-		compatible = "mediatek,camera_main_two";
-		#thermal-sensor-cells = <0>;
-		reg = <0x10>;
-		status = "okay";
-	};
-#endif
 };
 &i2c4 {
 	status = "okay";
@@ -342,7 +335,7 @@
 		status = "okay";
 	};
 
-        /*ov02b1b*/
+        /*Hi1634Q*/
 	camera_sub_mtk:camera_sub@21 {
 		compatible = "mediatek,camera_sub";
 		#thermal-sensor-cells = <0>;
@@ -357,14 +350,6 @@
 		reg = <0x2d>;
 		status = "okay";
 	};
-#if 0
-	camera_sub_mtk:camera_sub@1a {
-		compatible = "mediatek,camera_sub";
-		#thermal-sensor-cells = <0>;
-		reg = <0x1a>;
-		status = "okay";
-	};
-#endif
 };
 &i2c8 {
 	status = "okay";
@@ -379,8 +364,8 @@
 	};
 
 	/*mot_vicky_ov02b10*/
-	camera_sub_two_mtk:camera_sub_two@3c {
-		compatible = "mediatek,camera_sub_two";
+	camera_main_three_mtk:camera_main_three@3c {
+		compatible = "mediatek,camera_main_three";
 		#thermal-sensor-cells = <0>;
 		reg = <0x3c>;
 		status = "okay";
@@ -405,10 +390,10 @@
 		polling-delay-passive = <0>; /* milliseconds */
 		thermal-sensors = <&camera_main_two_mtk>;
 	};
-	camera_sub_two: camera_sub_two {
+	camera_main_three: camera_main_three {
 		polling-delay = <1000>; /* milliseconds */
 		polling-delay-passive = <0>; /* milliseconds */
-		thermal-sensors = <&camera_sub_two_mtk>;
+		thermal-sensors = <&camera_main_three_mtk>;
 	};
 };
 /* CAMERA TZ config end */
