arm/dts: factory Charger TCMD test
add charger TCMD dts
add charger mt6789-moto-vicky-charger.dtsi

Change-Id: I05a19652520b78004c347748441dbd1a180871a0
Reviewed-on: https://gerrit.mot.com/2264949
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>
Reviewed-by: Wei Xu <xuwei9@mt.com>
Reviewed-by: Wang Wang <wangwang1@mt.com>
Reviewed-by: Lei Chen <chenl18@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6789-vicky-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6789-vicky-common-overlay.dtsi
@@ -17,6 +17,7 @@
 #include "mediatek/mt6789-vicky-audio-overlay.dtsi"
 #include "mediatek/vicky-touch.dtsi"
 #include "mediatek/mt6789-vicky-fps-overlay.dtsi"
+#include "mediatek/mt6789-moto-vicky-charger.dtsi"
 &dispsys_config {
 	pinctrl-names =
 		"lcm_rst_out1_gpio", "lcm_rst_out0_gpio",
