arm64/dts: Add flash device for Vicky.
Add platform device for flashlight. Or we'll meet following error when try to open torch:
FlashHal: setOnOff(): sensorDev(1) not available.


Change-Id: Ia0bd472b1b9dc6fb911e1a7cd897c4cc10de5670
Signed-off-by: chenglong1 <chenglong1@mt.com>
Reviewed-on: https://gerrit.mot.com/2265014
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Reviewed-by: Long Cheng <chengl1@motorola.com>
Reviewed-by: Zhichao Chen <chenzc2@motorola.com>
SLTApproved: Zhichao Chen <chenzc2@motorola.com>
Tested-by: Zhichao Chen <chenzc2@motorola.com>
Tested-by: Jira Key
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6789.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6789.dts
@@ -1803,6 +1803,10 @@
 		compatible = "mediatek,flashlight_core";
 	};
 
+	aw36518: aw36518{
+		compatible = "awinic,aw36518";
+	};
+
 	mtk_composite_v4l2_1: mtk_composite_v4l2_1 {
 		compatible = "mediatek,mtk_composite_v4l2_1";
 	};
