Vicky: Add AF driver for main camera.
AF normal mode is serving for Vicky main camera, since we don't
have final initial setting yet, we'll update init setting and set AF
into advanced mode later.

Change-Id: I67d8104f2cba0dfe011ac9edaf07d2a65c9fc3d5
Signed-off-by: chenglong1 <chenglong1@mt.com>
Reviewed-on: https://gerrit.mot.com/2265013
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: <hansx3@motorola.com>
Reviewed-by: XiaoFeng Wang <wangxf32@mt.com>
Reviewed-by: <wangzl37@motorola.com>
Reviewed-by: <liuzy55@motorola.com>
Reviewed-by: Zhichao Chen <chenzc2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6789_vicky_camera_overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6789_vicky_camera_overlay.dtsi
@@ -254,7 +254,7 @@
 	cam0_vcama-supply = <&mt6358_vcamio_reg>;
 	cam0_vcamio-supply = <&mt6358_vcamio_reg>;
 	cam0_vcamd-supply = <&mt6358_vcamio_reg>;
-//	cam0_vcama1-supply = <&mt6358_vcamio_reg>;
+	cam0_vcamaf-supply = <&mt6358_vcamio_reg>;
 
 	/* front hi1634*/
 	cam1_vcama-supply = <&mt6358_vcamio_reg>;
@@ -275,7 +275,7 @@
 	cam0_pin_vcama = "wl2868";
 	cam0_pin_vcamio = "wl2868";
 	cam0_pin_vcamd = "wl2868";
-	cam0_pin_vcama1 = "wl2868";
+	cam0_pin_vcamaf = "wl2868";
 	cam1_pin_mclk = "mclk";
 	cam1_pin_rst = "gpio";
 	cam1_pin_vcama = "wl2868";
@@ -320,6 +320,12 @@
 		compatible = "mediatek,camera_main";
 		#thermal-sensor-cells = <0>;
 		reg = <0x56>;
+		status = "okay";
+	};
+
+	camera_main_af_mtk:camera_main_af@0c {
+		compatible = "mediatek,camera_main_af";
+		reg = <0x0c>;
 		status = "okay";
 	};
 };
