--- a/arch/arm64/boot/dts/mediatek/mt6789-moto-vicky-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6789-moto-vicky-charger.dtsi
@@ -35,3 +35,38 @@
         mmi,lower-limit-capacity = <60>;
 };
 
+&i2c6 {
+        bq2597x-standalone@66 {
+                compatible = "ti,bq2597x-standalone";
+                reg = <0x66>;
+                interrupt-parent = <&pio>;
+
+                ti,bq2597x,bat-ovp-alarm-disable;
+                ti,bq2597x,bat-ucp-alarm-disable;
+                ti,bq2597x,bat-ucp-disable;
+
+                ti,bq2597x,bat-therm-disable;
+                ti,bq2597x,bus-therm-disable;
+                ti,bq2597x,die-therm-disable;
+
+                ti,bq2597x,bat-ovp-threshold = <4525>;
+                ti,bq2597x,bat-ovp-alarm-threshold = <4490>;
+                ti,bq2597x,bat-ocp-threshold = <7000>;
+                ti,bq2597x,bat-ocp-alarm-threshold = <6000>;
+
+                ti,bq2597x,bus-ovp-threshold = <12000>;
+                ti,bq2597x,bus-ovp-alarm-threshold = <11000>;
+                ti,bq2597x,bus-ocp-threshold = <3750>;
+                ti,bq2597x,bus-ocp-alarm-threshold = <3500>;
+
+
+                ti,bq2597x,bat-therm-threshold = <0x15>;/*4.1%*/
+                ti,bq2597x,bus-therm-threshold = <0x15>;/*4.1%*/
+                ti,bq2597x,die-therm-threshold = <145>;
+
+                ti,bq2597x,ac-ovp-threshold = <14>;
+                ti,bq2597x,sense-resistor-mohm = <5>;
+
+                sc8551,ac-ovp-threshold = <13>;
+        };
+};
