--- a/arch/arm64/boot/dts/mediatek/mt6789-moto-vicky-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6789-moto-vicky-charger.dtsi
@@ -70,3 +70,46 @@
                 sc8551,ac-ovp-threshold = <13>;
         };
 };
+
+&odm {
+	mmi_chrg_manager {
+		compatible = "mmi,chrg-manager";
+		mmi,pps-volt-steps = <20000>;
+		mmi,pps-curr-steps = <40000>;
+		mmi,pd-volt-max = <12000000>;
+		mmi,pd-curr-max = <3000000>;
+		mmi,batt-curr-boost = <300000>;
+		mmi,batt-ovp-lmt = <4550000>;
+		mmi,pl-chrg-vbatt-min = <3600000>;
+		mmi,typec-middle-current = <1500000>;
+		mmi,step-first-current-comp = <0>;
+		mmi,dont-rerun-aicl;
+		mmi,chrg-temp-zones-num = <5>;
+		mmi,mmi-chrg-temp-zones =
+					<0 4200 1000  0 0>,
+					<10 4250 2500 4450 1000>,
+					<15 4450 2500 0 0>,
+					<45 4300 5800 4470 4000>,
+					<60 4200 4000 0 0>;
+/*
+            mmi,mmi-ffc-zones = <4200 243>,
+                                <4250 243>,
+                                <4450 243>,
+                                <4480 550>,
+                                <4480 588>,
+                                <4480 631>,
+                                <4200 243>;
+*/
+		mmi,thermal-min-level = <1500000>;
+		charger_device_0 {
+			chrg-name = "pmic-sw";
+			psy-name = "battery";
+			charging-curr-limited = <500000>;
+		};
+		charger_device_1 {
+			chrg-name = "cp-master";
+			psy-name = "bq2597x-standalone";
+			charging-curr-min = <1500000>;
+		};
+	};
+};
