--- a/arch/arm64/boot/dts/mediatek/mt6789-moto-base.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6789-moto-base.dtsi
@@ -1,4 +1,4 @@
-/*
+S/*
  * Things can done here:
  * 	Add nodes or properties to root node
  * 	Delete nodes or properties
@@ -7,6 +7,9 @@
 / {
 	utags: utags { };
 	hw: hw { };
+	tboard_thermistor1: thermal-ntc1 { };
+	tboard_thermistor2: thermal-ntc2 { };
+	tboard_thermistor3: thermal-ntc3 { };
 	tboard_thermistor4: thermal-ntc4 { };
 	tboard_thermistor5: thermal-ntc5 { };
 	moto_chg_tcmd: moto_chg_tcmd { };
