arm/dts:updata battery parameter
add zcv table
add serialnum

Change-Id: I602b63602e42e4cac8e432f8af5e2131cd2c2083
Reviewed-on: https://gerrit.mot.com/2267230
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Lei Chen <chenl18@motorola.com>
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6789-moto-vicky-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6789-moto-vicky-charger.dtsi
@@ -146,3 +146,10 @@
 		};
 	};
 };
+&mtk_gauge {
+	df-serialnum = "SB18D50387";
+#include "bat_setting/mt6789_battery_table_ATL1.dtsi"
+#include "bat_setting/mt6789_battery_table_ATL2.dtsi"
+#include "bat_setting/mt6789_battery_table_ATL3.dtsi"
+#include "bat_setting/mt6789_battery_table_SCUD.dtsi"
+};
