asoc:add aw883xx driver in sound kernel
add aw883xx driver;
version 1.2

Change-Id: I091f39729fe386c5b465b7f35b5c5f5bccb5ed24
Signed-off-by: yaozm1 <yaozm1@mt.com>
Reviewed-on: https://gerrit.mot.com/2268510
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>
Submit-Approved: Jira Key

--- a/sound/soc/Kconfig
+++ b/sound/soc/Kconfig
@@ -84,5 +84,7 @@ source "sound/soc/codecs/Kconfig"
 # generic frame-work
 source "sound/soc/generic/Kconfig"
 
+source "sound/soc/codecs/aw883xx/Kconfig"
+
 endif	# SND_SOC
 
