Vicky: enable s5k4h7 eeprom feature.
camera:
enable s5k4h7 eeprom feature.

Change-Id: I16f11827f58620def383c156ad91a7e33a26556b
Signed-off-by: huangsh4 <huangsh4@mt.com>
Reviewed-on: https://gerrit.mot.com/2265984
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: <hansx3@motorola.com>
Reviewed-by: <liuzy55@motorola.com>
Reviewed-by: Long Cheng <chengl1@motorola.com>
Reviewed-by: Zhichao Chen <chenzc2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6789_vicky_camera_overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6789_vicky_camera_overlay.dtsi
@@ -340,7 +340,11 @@
 		reg = <0x51>;
 		status = "okay";
 	};
-
+	mtk_camera_eeprom2:camera_eeprom2@50 {
+		compatible = "mediatek,camera_eeprom";
+		reg = <0x50>;
+		status = "okay";
+	};
         /*Hi1634Q*/
 	camera_sub_mtk:camera_sub@21 {
 		compatible = "mediatek,camera_sub";
