arm/dts:usb prefernce not selectable
add dts :rt-pd-manager
Change-Id: I2d508e67c284a9d7f32667b8d4e94df86c433236
Reviewed-on: https://gerrit.mot.com/2270879
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Lei Chen <chenl18@motorola.com>
Reviewed-by: Wei Xu <xuwei9@mt.com>
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6789.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6789.dts
@@ -6348,6 +6348,11 @@
 		/* fast charging algo support indicator */
 		/*enable_fast_charging_indicator;*/
 	};
+
+	rt-pd-manager {
+		compatible = "mediatek,rt-pd-manager";
+	};
+
 	eint_chg_0: eint_chg_0 {
 	};
 
