Vicky: enable ov02b10 eeprom feature.
camera:
enable ov02b10 eeprom feature.

Change-Id: I675037b3da34faa991e8c2ed789224a76438dcbf
Signed-off-by: hansx3 <hansx3@mt.com>
Reviewed-on: https://gerrit.mot.com/2270971
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Long Cheng <chengl1@motorola.com>
Reviewed-by: XiaoFeng Wang <wangxf32@mt.com>
Reviewed-by: <liuzy55@motorola.com>
Reviewed-by: Shenhuai Huang <huangsh4@motorola.com>
Reviewed-by: Zhichao Chen <chenzc2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6789_vicky_camera_overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6789_vicky_camera_overlay.dtsi
@@ -367,6 +367,12 @@
 	#address-cells = <1>;
 	#size-cells = <0>;
 
+	mtk_camera_eeprom4:camera_eeprom4@51 {
+		compatible = "mediatek,camera_eeprom";
+		reg = <0x51>;
+		status = "okay";
+	};
+
 	/*mot_vicky_ov02b10*/
 	camera_main_three_mtk:camera_main_three@3c {
 		compatible = "mediatek,camera_main_three";
