--- a/drivers/misc/mediatek/imgsensor/src/common/v1_1/mot_vicky_ov02b10_mipi_raw/Makefile
+++ b/drivers/misc/mediatek/imgsensor/src/common/v1_1/mot_vicky_ov02b10_mipi_raw/Makefile
@@ -2,3 +2,4 @@
 # Copyright (C) 2020 MediaTek Inc.
 imgsensor_isp6s-objs += \
         $(subdrv-rpath)/mot_vicky_ov02b10mipiraw_Sensor.o
+imgsensor_isp6s-objs += $(subdrv-rpath)/mot_vicky_ov02b10mipiraw_otp.o
