--- a/arch/arm64/boot/dts/mediatek/mt6789-vicky-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6789-vicky-common-overlay.dtsi
@@ -187,7 +187,8 @@
 		irq-gpio = <&pio 13 0x0>;
                 chip_name = "AW96105";
 		sar-num = <0>;
-		aw9610x,channel_number = <0x3>;
+		aw9610x,channel_number = <0x5>;
+		ref_channel = <0x6>;
 		ch0_name = "capsense_bottom_left";
 		ch1_name = "capsense_top";
 		ch2_name = "capsense_bottom_right";
